# StartupManager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  default.json  index.html  main.rs  package-lock.json  package.json  tauri.conf.json  vite.config.js
.claude/: settings.local.json
src/: App.vue  style.css
src/composables/: useTauri.js  useToast.js
