[package]
name = "startup-manager"
version = "1.0.0"
description = "Local project startup manager"
edition = "2021"

[[bin]]
name = "startup-manager"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
