[package]
name = "startup-manager"
version = "0.0.2"
description = "Local project startup manager"
edition = "2021"

[[bin]]
name = "startup-manager"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
